build: track changes to GtkStack:homogeneous removal

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -13,7 +13,8 @@
         <property name="column-spacing">6</property>
         <child>
           <object class="GtkStack" id="stack">
-            <property name="homogeneous">true</property>
+            <property name="hhomogeneous">true</property>
+            <property name="vhomogeneous">true</property>
             <child>
               <object class="GtkLabel" id="empty"/>
             </child>
