--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -8,7 +8,8 @@
         <child type="start">
           <object class="GtkStack" id="stack">
             <property name="transition-type">crossfade</property>
-            <property name="homogeneous">true</property>
+            <property name="hhomogeneous">true</property>
+            <property name="vhomogeneous">true</property>
             <property name="halign">end</property>
             <property name="hexpand">true</property>
             <property name="margin-end">6</property>
