track changes to GTK 4 including gtk_widget_destroy()
We lost most of our container bits and gtk_widget_destroy(). I expect more
changes to break things in the future, but this gets stuff working first.

--- a/src/editor-sidebar.ui
+++ b/src/editor-sidebar.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.98"/>
-  <template class="EditorSidebar" parent="GtkBin">
+  <template class="EditorSidebar" parent="GtkWidget">
     <style>
       <class name="view"/>
     </style>
