--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.98"/>
-  <template class="EditorPage" parent="GtkBin">
+  <template class="EditorPage" parent="GtkWidget">
     <child>
-      <object class="GtkOverlay">
+      <object class="GtkOverlay" id="overlay">
         <child type="overlay">
           <object class="GtkRevealer" id="search_revealer">
             <property name="halign">end</property>
