--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.98"/>
-  <template class="EditorSearchBar" parent="GtkBin">
+  <template class="EditorSearchBar" parent="GtkWidget">
     <child>
-      <object class="GtkGrid">
+      <object class="GtkGrid" id="grid">
         <property name="column-spacing">8</property>
         <property name="row-spacing">8</property>
         <child>
