--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.98"/>
-  <template class="EditorTab" parent="GtkBin">
+  <template class="EditorTab" parent="GtkWidget">
     <property name="hexpand">true</property>
     <child>
       <object class="GtkCenterBox">
