gtk: track removal of GtkContainer and other property changes

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -211,8 +211,8 @@
             </child>
           </object>
         </child>
-        <property name="resize-child1">true</property>
-        <property name="shrink-child1">false</property>
+        <property name="resize-start-child">true</property>
+        <property name="shrink-start-child">false</property>
       </object>
     </child>
   </template>
