--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
+  <requires lib="gtk+" version="3.24"/>
   <template class="EditorLanguageDialog" parent="GtkWindow">
     <style>
       <class name="org-gnome-TextEditor"/>
@@ -9,12 +9,15 @@
     <property name="title" translatable="yes">Highlight Mode</property>
     <child>
       <object class="GtkBox">
+        <property name="visible">true</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkBox">
+            <property name="visible">true</property>
             <property name="orientation">horizontal</property>
             <child>
               <object class="GtkEntry" id="search_entry">
+                <property name="visible">true</property>
                 <property name="primary-icon-name">edit-find-symbolic</property>
                 <property name="hexpand">true</property>
                 <property name="margin-end">40</property>
@@ -27,16 +30,19 @@
         </child>
         <child>
           <object class="GtkScrolledWindow">
+            <property name="visible">true</property>
             <property name="vexpand">true</property>
             <property name="hscrollbar-policy">never</property>
             <child>
               <object class="GtkFrame">
+                <property name="visible">true</property>
                 <property name="margin-start">40</property>
                 <property name="margin-end">40</property>
                 <property name="margin-top">10</property>
                 <property name="margin-bottom">40</property>
                 <child>
                   <object class="GtkListBox" id="list_box">
+                    <property name="visible">true</property>
                   </object>
                 </child>
               </object>
