--- a/src/editor-language-row.ui
+++ b/src/editor-language-row.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
+  <requires lib="gtk+" version="3.24"/>
   <template class="EditorLanguageRow" parent="GtkListBoxRow">
     <property name="selectable">false</property>
     <child>
@@ -11,9 +11,11 @@
         <property name="margin-start">12</property>
         <property name="margin-end">12</property>
         <property name="spacing">12</property>
+        <property name="visible">true</property>
         <child>
           <object class="GtkLabel" id="title">
             <property name="halign">start</property>
+            <property name="visible">true</property>
           </object>
         </child>
         <child>
