--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
-  <template class="EditorPage" parent="GtkWidget">
+  <requires lib="gtk+" version="3.24"/>
+  <template class="EditorPage" parent="GtkBin">
     <child>
       <object class="GtkOverlay" id="overlay">
+        <property name="visible">true</property>
         <child type="overlay">
           <object class="GtkRevealer" id="search_revealer">
+            <property name="visible">true</property>
             <property name="halign">end</property>
             <property name="margin-end">6</property>
             <property name="hexpand">false</property>
@@ -16,6 +18,7 @@
             <property name="reveal-child">false</property>
             <child>
               <object class="EditorSearchBar" id="search_bar">
+                <property name="visible">true</property>
               </object>
             </child>
           </object>
@@ -30,10 +33,12 @@
             <property name="hexpand">true</property>
             <property name="valign">start</property>
             <property name="vexpand">false</property>
+            <property name="visible">true</property>
           </object>
         </child>
         <child>
           <object class="GtkScrolledWindow" id="scroller">
+            <property name="visible">true</property>
             <child>
               <object class="GtkSourceView" id="view">
                 <property name="auto-indent">true</property>
@@ -42,6 +47,7 @@
                 <property name="left-margin">16</property>
                 <property name="right-margin">16</property>
                 <property name="monospace">true</property>
+                <property name="visible">true</property>
               </object>
             </child>
           </object>
