--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
-  <template class="EditorSearchBar" parent="GtkWidget">
+  <requires lib="gtk+" version="3.24"/>
+  <template class="EditorSearchBar" parent="EditorBin">
     <child>
       <object class="GtkGrid" id="grid">
+        <property name="visible">true</property>
         <property name="column-spacing">8</property>
         <property name="row-spacing">8</property>
         <child>
           <object class="GtkEntry" id="search_entry">
+            <property name="visible">true</property>
             <property name="primary-icon-name">edit-find-symbolic</property>
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
             <signal name="activate" handler="editor_search_bar_search_activate_cb" swapped="true" object="EditorSearchBar"/>
-            <layout>
-              <property name="top-attach">0</property>
-              <property name="left-attach">0</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">0</property>
+            <property name="left-attach">0</property>
+          </packing>
         </child>
         <child>
           <object class="GtkEntry" id="replace_entry">
@@ -24,14 +26,15 @@
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
             <property name="visible">false</property>
-            <layout>
-              <property name="top-attach">1</property>
-              <property name="left-attach">0</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">1</property>
+            <property name="left-attach">0</property>
+          </packing>
         </child>
         <child>
           <object class="GtkBox">
+            <property name="visible">true</property>
             <property name="homogeneous">true</property>
             <property name="orientation">horizontal</property>
             <style>
@@ -39,56 +42,86 @@
             </style>
             <child>
               <object class="GtkButton">
+                <property name="visible">true</property>
                 <property name="action-name">search.move-previous</property>
-                <property name="icon-name">go-up-symbolic</property>
+                <child>
+                  <object class="GtkImage">
+                    <property name="icon-name">go-up-symbolic</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
               <object class="GtkButton">
+                <property name="visible">true</property>
                 <property name="action-name">search.move-next</property>
-                <property name="icon-name">go-down-symbolic</property>
+                <child>
+                  <object class="GtkImage">
+                    <property name="icon-name">go-down-symbolic</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
               </object>
             </child>
-            <layout>
-              <property name="top-attach">0</property>
-              <property name="left-attach">1</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">0</property>
+            <property name="left-attach">1</property>
+          </packing>
         </child>
         <child>
           <object class="GtkToggleButton" id="replace_mode_button">
-            <property name="icon-name">edit-find-replace-symbolic</property>
-            <layout>
-              <property name="top-attach">0</property>
-              <property name="left-attach">2</property>
-            </layout>
+            <property name="visible">true</property>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-name">edit-find-replace-symbolic</property>
+                <property name="visible">true</property>
+              </object>
+            </child>
           </object>
+          <packing>
+            <property name="top-attach">0</property>
+            <property name="left-attach">2</property>
+          </packing>
         </child>
         <child>
           <object class="GtkToggleButton" id="options_button">
-            <property name="icon-name">emblem-system-symbolic</property>
-            <layout>
-              <property name="top-attach">0</property>
-              <property name="left-attach">3</property>
-            </layout>
+            <property name="visible">true</property>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-name">emblem-system-symbolic</property>
+                <property name="visible">true</property>
+              </object>
+            </child>
           </object>
+          <packing>
+            <property name="top-attach">0</property>
+            <property name="left-attach">3</property>
+          </packing>
         </child>
         <child>
           <object class="GtkButton" id="close_button">
             <property name="action-name">search.hide</property>
-            <property name="icon-name">window-close-symbolic</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
+            <property name="visible">true</property>
             <style>
               <class name="flat"/>
               <class name="small-button"/>
               <class name="circular"/>
             </style>
-            <layout>
-              <property name="top-attach">0</property>
-              <property name="left-attach">4</property>
-            </layout>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-name">window-close-symbolic</property>
+                <property name="visible">true</property>
+              </object>
+            </child>
           </object>
+          <packing>
+            <property name="top-attach">0</property>
+            <property name="left-attach">4</property>
+          </packing>
         </child>
         <child>
           <object class="GtkButton" id="replace_button">
@@ -96,11 +129,11 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">_Replace</property>
             <property name="visible">false</property>
-            <layout>
-              <property name="top-attach">1</property>
-              <property name="left-attach">1</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">1</property>
+            <property name="left-attach">1</property>
+          </packing>
         </child>
         <child>
           <object class="GtkButton" id="replace_all_button">
@@ -108,42 +141,45 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">Replace _All</property>
             <property name="visible">false</property>
-            <layout>
-              <property name="top-attach">1</property>
-              <property name="left-attach">2</property>
-              <property name="column-span">3</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">1</property>
+            <property name="left-attach">2</property>
+            <property name="width">3</property>
+          </packing>
         </child>
         <child>
           <object class="GtkBox" id="options_box">
             <property name="orientation">horizontal</property>
             <property name="spacing">6</property>
             <property name="visible">false</property>
-            <layout>
-              <property name="top-attach">2</property>
-              <property name="left-attach">0</property>
-              <property name="column-span">4</property>
-            </layout>
             <child>
               <object class="GtkCheckButton" id="regex_button">
+                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">Re_gular expressions</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="case_button">
+                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">_Case sensitive</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="word_button">
+                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">Match whole _word only</property>
               </object>
             </child>
           </object>
+          <packing>
+            <property name="top-attach">2</property>
+            <property name="left-attach">0</property>
+            <property name="width">4</property>
+          </packing>
         </child>
       </object>
     </child>
