--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
+  <requires lib="gtk+" version="3.24"/>
   <template class="EditorSidebarRow" parent="GtkListBoxRow">
     <property name="selectable">false</property>
     <child>
       <object class="GtkGrid">
+        <property name="visible">true</property>
         <property name="margin-top">3</property>
         <property name="margin-start">6</property>
         <property name="margin-end">6</property>
@@ -13,13 +14,17 @@
         <property name="column-spacing">6</property>
         <child>
           <object class="GtkStack" id="stack">
+            <property name="visible">true</property>
             <property name="hhomogeneous">true</property>
             <property name="vhomogeneous">true</property>
             <child>
-              <object class="GtkLabel" id="empty"/>
+              <object class="GtkLabel" id="empty">
+                <property name="visible">true</property>
+              </object>
             </child>
             <child>
               <object class="GtkLabel" id="is_modified">
+                <property name="visible">true</property>
                 <property name="halign">center</property>
                 <property name="valign">baseline</property>
                 <property name="label">•</property>
@@ -29,27 +34,29 @@
         </child>
         <child>
           <object class="GtkLabel" id="title">
+            <property name="visible">true</property>
             <property name="halign">start</property>
             <property name="ellipsize">end</property>
             <property name="hexpand">true</property>
-            <layout>
-              <property name="left-attach">1</property>
-            </layout>
           </object>
+          <packing>
+            <property name="left-attach">1</property>
+          </packing>
         </child>
         <child>
           <object class="GtkLabel" id="subtitle">
+            <property name="visible">true</property>
             <property name="halign">start</property>
             <property name="ellipsize">middle</property>
             <property name="hexpand">true</property>
             <style>
               <class name="dim-label"/>
             </style>
-            <layout>
-              <property name="top-attach">1</property>
-              <property name="left-attach">1</property>
-            </layout>
           </object>
+          <packing>
+            <property name="top-attach">1</property>
+            <property name="left-attach">1</property>
+          </packing>
         </child>
       </object>
     </child>
