settings: enable automatic margin position settings

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -93,7 +93,7 @@
       </item>
       <item>
         <attribute name="label" translatable="yes">Automatic Margin Position</attribute>
-        <attribute name="action">settings.auto-margin-position</attribute>
+        <attribute name="action">settings.discover-settings</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">Highlight Mode</attribute>
