--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -90,21 +90,13 @@
             <property name="spacing">6</property>
             <property name="visible">true</property>
             <child>
-              <object class="GtkBox" id="position_box">
+              <object class="EditorPositionLabel" id="position_label">
                 <property name="visible">true</property>
-                <child>
-                  <object class="GtkLabel" id="position_label">
-                    <property name="visible">true</property>
-                    <property name="halign">end</property>
-                    <property name="hexpand">false</property>
-                    <property name="valign">center</property>
-                    <property name="vexpand">false</property>
-                    <property name="visible">false</property>
-                    <style>
-                      <class name="position-label"/>
-                    </style>
-                  </object>
-                </child>
+                <property name="halign">end</property>
+                <property name="hexpand">false</property>
+                <property name="valign">center</property>
+                <property name="vexpand">false</property>
+                <property name="visible">false</property>
               </object>
             </child>
             <child>
