--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -140,115 +140,121 @@
       </object>
     </child>
     <child>
-      <object class="GtkPaned" id="paned">
-        <property name="orientation">horizontal</property>
-        <property name="position">250</property>
+      <object class="GtkEventBox" id="drop_box">
         <property name="visible">true</property>
+        <property name="visible-window">true</property>
         <child>
-          <object class="EditorSidebar" id="sidebar">
-            <property name="visible" bind-source="open_toggle_button" bind-property="active" bind-flags="bidirectional">false</property>
-          </object>
-          <packing>
-            <property name="resize">true</property>
-            <property name="shrink">false</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkStack" id="stack">
+          <object class="GtkPaned" id="paned">
+            <property name="orientation">horizontal</property>
+            <property name="position">250</property>
             <property name="visible">true</property>
-            <style>
-              <class name="view"/>
-            </style>
             <child>
-              <object class="GtkNotebook" id="notebook">
-                <signal name="page-reordered" handler="editor_window_notebook_page_reordered_cb" swapped="true" object="EditorWindow"/>
-                <property name="scrollable">true</property>
-                <property name="show-border">false</property>
-                <property name="show-tabs">false</property>
-                <property name="hexpand">true</property>
-                <property name="vexpand">true</property>
-                <property name="visible">true</property>
+              <object class="EditorSidebar" id="sidebar">
+                <property name="visible" bind-source="open_toggle_button" bind-property="active" bind-flags="bidirectional">false</property>
               </object>
+              <packing>
+                <property name="resize">true</property>
+                <property name="shrink">false</property>
+              </packing>
             </child>
             <child>
-              <object class="GtkBox" id="empty">
-                <property name="hexpand">true</property>
-                <property name="vexpand">true</property>
-                <property name="halign">center</property>
-                <property name="valign">center</property>
-                <property name="orientation">vertical</property>
-                <property name="margin-top">32</property>
-                <property name="margin-start">32</property>
-                <property name="margin-end">32</property>
-                <property name="margin-bottom">32</property>
+              <object class="GtkStack" id="stack">
                 <property name="visible">true</property>
+                <style>
+                  <class name="view"/>
+                </style>
                 <child>
-                  <object class="GtkImage">
-                    <property name="icon-name">text-editor-symbolic</property>
-                    <property name="pixel-size">128</property>
-                    <property name="margin-start">24</property>
-                    <property name="margin-bottom">24</property>
+                  <object class="GtkNotebook" id="notebook">
+                    <signal name="page-reordered" handler="editor_window_notebook_page_reordered_cb" swapped="true" object="EditorWindow"/>
+                    <property name="scrollable">true</property>
+                    <property name="show-border">false</property>
+                    <property name="show-tabs">false</property>
+                    <property name="hexpand">true</property>
+                    <property name="vexpand">true</property>
                     <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">Start or Open a Document</property>
-                    <property name="margin-bottom">16</property>
+                  <object class="GtkBox" id="empty">
+                    <property name="hexpand">true</property>
+                    <property name="vexpand">true</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="orientation">vertical</property>
+                    <property name="margin-top">32</property>
+                    <property name="margin-start">32</property>
+                    <property name="margin-end">32</property>
+                    <property name="margin-bottom">32</property>
                     <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                    <attributes>
-                      <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.4"/>
-                    </attributes>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Use the open sidebar</property>
-                    <property name="margin-bottom">6</property>
-                    <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press the new tab button</property>
-                    <property name="margin-bottom">6</property>
-                    <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press Ctrl+N to start a new document</property>
-                    <property name="margin-bottom">6</property>
-                    <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="halign">start</property>
-                    <property name="label" translatable="yes">• Press Ctrl+O to browse for a document</property>
-                    <property name="visible">true</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">text-editor-symbolic</property>
+                        <property name="pixel-size">128</property>
+                        <property name="margin-start">24</property>
+                        <property name="margin-bottom">24</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">Start or Open a Document</property>
+                        <property name="margin-bottom">16</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                          <attribute name="scale" value="1.4"/>
+                        </attributes>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">• Use the open sidebar</property>
+                        <property name="margin-bottom">6</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">• Press the new tab button</property>
+                        <property name="margin-bottom">6</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">• Press Ctrl+N to start a new document</property>
+                        <property name="margin-bottom">6</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">• Press Ctrl+O to browse for a document</property>
+                        <property name="visible">true</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
