--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -3,51 +3,121 @@
   <requires lib="gtk+" version="3.24"/>
   <template class="EditorPage" parent="GtkBin">
     <child>
-      <object class="GtkOverlay" id="overlay">
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
         <property name="visible">true</property>
-        <child type="overlay">
-          <object class="GtkRevealer" id="search_revealer">
+        <child>
+          <object class="GtkInfoBar" id="changed_infobar">
+            <property name="message-type">warning</property>
+            <property name="revealed">false</property>
             <property name="visible">true</property>
-            <property name="halign">end</property>
-            <property name="margin-end">6</property>
-            <property name="hexpand">false</property>
-            <property name="valign">start</property>
-            <property name="vexpand">false</property>
-            <property name="transition-duration">300</property>
-            <property name="transition-type">slide-down</property>
-            <property name="reveal-child">false</property>
-            <child>
-              <object class="EditorSearchBar" id="search_bar">
-                <property name="visible">true</property>
+            <child internal-child="content_area">
+              <object class="GtkBox">
+                <child>
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">3</property>
+                    <property name="hexpand">true</property>
+                    <property name="visible">true</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">File Has Changed on Disk</property>
+                        <property name="visible">true</property>
+                        <property name="xalign">0.0</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                        </attributes>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">The file has been changed by another program.</property>
+                        <property name="visible">true</property>
+                        <property name="xalign">0.0</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child internal-child="content_area">
+              <object class="GtkBox">
+                <property name="valign">center</property>
+                <property name="vexpand">false</property>
+                <child>
+                  <object class="GtkButton">
+                    <property name="visible">true</property>
+                    <property name="label" translatable="yes">Discard Changes &amp; Reload</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton">
+                    <property name="visible">true</property>
+                    <property name="relief">none</property>
+                    <style>
+                      <class name="round"/>
+                    </style>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">window-close-symbolic</property>
+                        <property name="visible">true</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
         </child>
-        <child type="overlay">
-          <object class="GtkProgressBar" id="progress_bar">
-            <style>
-              <class name="osd"/>
-            </style>
-            <property name="can-focus">false</property>
-            <property name="halign">fill</property>
-            <property name="hexpand">true</property>
-            <property name="valign">start</property>
-            <property name="vexpand">false</property>
-            <property name="visible">true</property>
-          </object>
-        </child>
         <child>
-          <object class="GtkScrolledWindow" id="scroller">
+          <object class="GtkOverlay" id="overlay">
+            <property name="vexpand">true</property>
             <property name="visible">true</property>
-            <child>
-              <object class="GtkSourceView" id="view">
-                <property name="auto-indent">true</property>
-                <property name="top-margin">16</property>
-                <property name="bottom-margin">16</property>
-                <property name="left-margin">16</property>
-                <property name="right-margin">16</property>
-                <property name="monospace">true</property>
+            <child type="overlay">
+              <object class="GtkRevealer" id="search_revealer">
                 <property name="visible">true</property>
+                <property name="halign">end</property>
+                <property name="margin-end">6</property>
+                <property name="hexpand">false</property>
+                <property name="valign">start</property>
+                <property name="vexpand">false</property>
+                <property name="transition-duration">300</property>
+                <property name="transition-type">slide-down</property>
+                <property name="reveal-child">false</property>
+                <child>
+                  <object class="EditorSearchBar" id="search_bar">
+                    <property name="visible">true</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="overlay">
+              <object class="GtkProgressBar" id="progress_bar">
+                <style>
+                  <class name="osd"/>
+                </style>
+                <property name="can-focus">false</property>
+                <property name="halign">fill</property>
+                <property name="hexpand">true</property>
+                <property name="valign">start</property>
+                <property name="vexpand">false</property>
+                <property name="visible">true</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow" id="scroller">
+                <property name="visible">true</property>
+                <child>
+                  <object class="GtkSourceView" id="view">
+                    <property name="auto-indent">true</property>
+                    <property name="top-margin">16</property>
+                    <property name="bottom-margin">16</property>
+                    <property name="left-margin">16</property>
+                    <property name="right-margin">16</property>
+                    <property name="monospace">true</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
