window: use HdyHeaderBar
So that we can actually drag.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -13,7 +13,7 @@
             <property name="orientation">vertical</property>
             <property name="visible">true</property>
             <child>
-              <object class="GtkHeaderBar" id="header_bar">
+              <object class="HdyHeaderBar" id="header_bar">
                 <property name="visible">true</property>
                 <property name="vexpand">false</property>
                 <property name="show-close-button">True</property>
