css: tweak close button for search bar

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -80,6 +80,8 @@ notebook:focus:backdrop {
   box-shadow: none;
 }
 .org-gnome-TextEditor page searchbar button.flat.circular {
-  margin: 0;
-  padding: 0;
+  min-width: 16px;
+  min-height: 16px;
+  margin: 0px;
+  padding: 3px;
 }
