search: impement search and replace
Fixes #34

--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -127,7 +127,7 @@
         </child>
         <child>
           <object class="GtkButton" id="replace_button">
-            <property name="action-name">search.replace</property>
+            <property name="action-name">search.replace-one</property>
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">_Replace</property>
             <property name="visible">false</property>
