window: implement alternate line number label
This moves the positioning information to the subtitle for the document
as specified by #6. We could still use a statusbar if we decide to go that
route, but this keeps the design change minimal which is my preference for
the time being.

Fixes #6

--- a/src/editor-position-label.ui
+++ b/src/editor-position-label.ui
@@ -12,12 +12,18 @@
             <property name="label" translatable="yes">Ln</property>
             <property name="margin-end">3</property>
             <property name="visible">true</property>
+            <attributes>
+              <attribute name="scale" value="0.8222"/>
+            </attributes>
           </object>
         </child>
         <child>
           <object class="GtkLabel" id="line">
             <property name="visible">true</property>
             <property name="width-chars">2</property>
+            <attributes>
+              <attribute name="scale" value="0.8222"/>
+            </attributes>
           </object>
         </child>
         <child>
@@ -26,12 +32,18 @@
             <property name="label" translatable="yes">Col</property>
             <property name="margin-end">3</property>
             <property name="visible">true</property>
+            <attributes>
+              <attribute name="scale" value="0.8222"/>
+            </attributes>
           </object>
         </child>
         <child>
           <object class="GtkLabel" id="column">
             <property name="visible">true</property>
             <property name="width-chars">2</property>
+            <attributes>
+              <attribute name="scale" value="0.8222"/>
+            </attributes>
           </object>
         </child>
       </object>
