--- a/src/editor-position-label.ui
+++ b/src/editor-position-label.ui
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
-  <template class="EditorPositionLabel" parent="EditorBin">
+  <requires lib="gtk+" version="4.0"/>
+  <template class="EditorPositionLabel" parent="GtkWidget">
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="box">
         <property name="orientation">horizontal</property>
         <property name="visible">true</property>
         <child>
