--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
-  <template class="EditorSearchBar" parent="EditorBin">
+  <requires lib="gtk+" version="4.0"/>
+  <template class="EditorSearchBar" parent="GtkWidget">
     <child>
       <object class="GtkGrid" id="grid">
-        <property name="visible">true</property>
         <property name="column-spacing">8</property>
         <property name="row-spacing">8</property>
         <child>
           <object class="GtkEntry" id="search_entry">
-            <property name="visible">true</property>
             <property name="primary-icon-name">edit-find-symbolic</property>
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
             <property name="placeholder-text" translatable="yes">Search</property>
             <signal name="activate" handler="editor_search_bar_search_activate_cb" swapped="true" object="EditorSearchBar"/>
+            <layout>
+              <property name="row">0</property>
+              <property name="column">0</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">0</property>
-            <property name="left-attach">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkEntry" id="replace_entry">
@@ -28,15 +26,14 @@
             <property name="hexpand">true</property>
             <property name="visible">false</property>
             <property name="placeholder-text" translatable="yes">Replace</property>
+            <layout>
+              <property name="row">1</property>
+              <property name="column">0</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">1</property>
-            <property name="left-attach">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkBox">
-            <property name="visible">true</property>
             <property name="homogeneous">true</property>
             <property name="orientation">horizontal</property>
             <style>
@@ -44,91 +41,61 @@
             </style>
             <child>
               <object class="GtkButton">
-                <property name="visible">true</property>
                 <property name="action-name">search.move-previous</property>
                 <property name="tooltip-text" translatable="yes">Move to previous match (Ctrl+Shift+g)</property>
-                <child>
-                  <object class="GtkImage">
-                    <property name="icon-name">go-up-symbolic</property>
-                    <property name="visible">true</property>
-                  </object>
-                </child>
+                <property name="icon-name">go-up-symbolic</property>
               </object>
             </child>
             <child>
               <object class="GtkButton">
-                <property name="visible">true</property>
                 <property name="action-name">search.move-next</property>
                 <property name="tooltip-text" translatable="yes">Move to next match (Ctrl+g)</property>
-                <child>
-                  <object class="GtkImage">
-                    <property name="icon-name">go-down-symbolic</property>
-                    <property name="visible">true</property>
-                  </object>
-                </child>
+                <property name="icon-name">go-down-symbolic</property>
               </object>
             </child>
+            <layout>
+              <property name="row">0</property>
+              <property name="column">1</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">0</property>
-            <property name="left-attach">1</property>
-          </packing>
         </child>
         <child>
           <object class="GtkToggleButton" id="replace_mode_button">
-            <property name="visible">true</property>
             <property name="tooltip-text" translatable="yes">Search &amp; Replace (Ctrl+h)</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon-name">edit-find-replace-symbolic</property>
-                <property name="visible">true</property>
-              </object>
-            </child>
+            <property name="icon-name">edit-find-replace-symbolic</property>
+            <layout>
+              <property name="row">0</property>
+              <property name="column">2</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">0</property>
-            <property name="left-attach">2</property>
-          </packing>
         </child>
         <child>
           <object class="GtkToggleButton" id="options_button">
-            <property name="visible">true</property>
             <property name="tooltip-text" translatable="yes">Toggle search options</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon-name">emblem-system-symbolic</property>
-                <property name="visible">true</property>
-              </object>
-            </child>
+            <property name="icon-name">emblem-system-symbolic</property>
+            <layout>
+              <property name="row">0</property>
+              <property name="column">3</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">0</property>
-            <property name="left-attach">3</property>
-          </packing>
         </child>
         <child>
           <object class="GtkButton" id="close_button">
             <property name="action-name">search.hide</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
-            <property name="visible">true</property>
             <property name="tooltip-text" translatable="yes">Close search</property>
+            <property name="icon-name">window-close-symbolic</property>
             <style>
               <class name="flat"/>
               <class name="small-button"/>
               <class name="circular"/>
             </style>
-            <child>
-              <object class="GtkImage">
-                <property name="icon-name">window-close-symbolic</property>
-                <property name="visible">true</property>
-              </object>
-            </child>
+            <layout>
+              <property name="row">0</property>
+              <property name="column">4</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">0</property>
-            <property name="left-attach">4</property>
-          </packing>
         </child>
         <child>
           <object class="GtkButton" id="replace_button">
@@ -136,11 +103,11 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">_Replace</property>
             <property name="visible">false</property>
+            <layout>
+              <property name="row">1</property>
+              <property name="column">1</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">1</property>
-            <property name="left-attach">1</property>
-          </packing>
         </child>
         <child>
           <object class="GtkButton" id="replace_all_button">
@@ -148,12 +115,12 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">Replace _All</property>
             <property name="visible">false</property>
+            <layout>
+              <property name="row">1</property>
+              <property name="column">2</property>
+              <property name="column-span">3</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">1</property>
-            <property name="left-attach">2</property>
-            <property name="width">3</property>
-          </packing>
         </child>
         <child>
           <object class="GtkBox" id="options_box">
@@ -162,31 +129,28 @@
             <property name="visible">false</property>
             <child>
               <object class="GtkCheckButton" id="regex_button">
-                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">Re_gular expressions</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="case_button">
-                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">_Case sensitive</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="word_button">
-                <property name="visible">true</property>
                 <property name="use-underline">true</property>
                 <property name="label" translatable="yes">Match whole _word only</property>
               </object>
             </child>
+            <layout>
+              <property name="row">2</property>
+              <property name="column">0</property>
+              <property name="column-span">4</property>
+            </layout>
           </object>
-          <packing>
-            <property name="top-attach">2</property>
-            <property name="left-attach">0</property>
-            <property name="width">4</property>
-          </packing>
         </child>
       </object>
     </child>
