--- a/src/editor-sidebar.ui
+++ b/src/editor-sidebar.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
-  <template class="EditorSidebar" parent="GtkBin">
+  <requires lib="gtk+" version="4.0"/>
+  <template class="EditorSidebar" parent="GtkWidget">
     <style>
       <class name="view"/>
     </style>
