--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -1,78 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
-  <template class="EditorTab" parent="GtkBin">
+  <requires lib="gtk+" version="3.98"/>
+  <template class="EditorTab" parent="GtkWidget">
     <property name="hexpand">true</property>
     <child>
-      <object class="GtkEventBox" id="event_box">
-        <property name="visible">true</property>
-        <child>
-          <object class="GtkBox">
-            <property name="visible">true</property>
+      <object class="GtkCenterBox" id="box">
+        <child type="start">
+          <object class="GtkStack" id="stack">
+            <property name="transition-type">crossfade</property>
+            <property name="hhomogeneous">true</property>
+            <property name="vhomogeneous">true</property>
+            <property name="halign">end</property>
+            <property name="hexpand">true</property>
             <property name="margin-end">6</property>
+            <child>
+              <object class="GtkLabel" id="empty"/>
+            </child>
+            <child>
+              <object class="GtkSpinner" id="spinner">
+                <property name="halign">center</property>
+                <property name="valign">center</property>
+                <property name="height-request">16</property>
+                <property name="width-request">16</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel" id="is_modified">
+                <property name="label">•</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child type="center">
+          <object class="GtkLabel" id="title">
+            <property name="hexpand">false</property>
+            <property name="width-chars">5</property>
+            <property name="ellipsize">middle</property>
+          </object>
+        </child>
+        <child type="end">
+          <object class="GtkButton" id="close_button">
+            <property name="action-name">tab.close</property>
+            <property name="icon-name">window-close-symbolic</property>
             <property name="margin-start">6</property>
-            <child>
-              <object class="GtkStack" id="stack">
-                <property name="visible">true</property>
-                <property name="transition-type">crossfade</property>
-                <property name="hhomogeneous">true</property>
-                <property name="vhomogeneous">true</property>
-                <property name="halign">end</property>
-                <property name="hexpand">true</property>
-                <property name="margin-end">6</property>
-                <child>
-                  <object class="GtkLabel" id="empty">
-                    <property name="visible">true</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkSpinner" id="spinner">
-                    <property name="visible">true</property>
-                    <property name="halign">center</property>
-                    <property name="valign">center</property>
-                    <property name="height-request">16</property>
-                    <property name="width-request">16</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="is_modified">
-                    <property name="visible">true</property>
-                    <property name="label">•</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="center">
-              <object class="GtkLabel" id="title">
-                <property name="visible">true</property>
-                <property name="hexpand">false</property>
-                <property name="width-chars">5</property>
-                <property name="ellipsize">middle</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkButton" id="close_button">
-                <property name="visible">true</property>
-                <property name="action-name">tab.close</property>
-                <property name="margin-start">6</property>
-                <property name="halign">end</property>
-                <property name="focus-on-click">false</property>
-                <property name="tooltip-text" translatable="yes">Close Document</property>
-                <style>
-                  <class name="small-button"/>
-                  <class name="flat"/>
-                </style>
-                <child>
-                  <object class="GtkImage">
-                    <property name="visible">true</property>
-                    <property name="icon-name">window-close-symbolic</property>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="pack-type">end</property>
-              </packing>
-            </child>
+            <property name="halign">end</property>
+            <property name="focus-on-click">false</property>
+            <property name="tooltip-text" translatable="yes">Close Document</property>
+            <style>
+              <class name="small-button"/>
+              <class name="flat"/>
+            </style>
           </object>
         </child>
       </object>
