menus: fix shortcut
So that the shortcut shows the same thing that is displayed.

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -12,7 +12,7 @@
       <item>
         <attribute name="label" translatable="yes">_Find/Replace…</attribute>
         <attribute name="action">page.begin-replace</attribute>
-        <attribute name="accel">&lt;primary&gt;f</attribute>
+        <attribute name="accel">&lt;primary&gt;h</attribute>
       </item>
     </section>
     <section>
